--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	
 	<!-- Header-->
 	<header>
-		<h1>Your Name</h1>
+		<h1>Zeyad Hassan</h1>
 		<p>Job Title or Skill Set</p>
 	</header>
 	
@@ -153,12 +153,12 @@
 				<div class="grid-2">
 					<h1>Skills</h1>
 					<ul>
-						<li>HTML</li>
-						<li>CSS</li>
-						<li>Javascript</li>
-						<li>Angular.js</li>
-						<li>Photoshop</li>
-						<li>Git</li>
+						<li>Skill1</li>
+						<li>Skill2</li>
+						<li>Skill3</li>
+						<li>Skill4</li>
+						<li>Skill5</li>
+						<li>Skill6</li>
 					</ul>
 				</div>
 				
@@ -166,9 +166,9 @@
 					<h1>In Conclusion</h1>
 					<p>
 						This is a good spot to highlight experiance and skills. Make sure to include a call to action like a link to your website, or your email address.
-						If you find bugs, want features, or have questions, feel free to submit an <a href="https://github.com/philipcdavis/responsive-resume/issues">issue</a>. You are free to use without attribution.
-						If you're ok sharing, I would love seeing what you make! Shoot me an
-						<a href="mailto:Phillysoul11@gmail.com?Subject=Responsive%20Resume" target="_top">email</a> or
+						If you find bugs, want features, or have questions, feel free to submit an <a href="https://github.com/zeyadhassan/zeyadhassan.github.io/issues">issue</a>.
+						If you'd like to contact me, Shoot me an
+						<a href="mailto:zeyad.hassan@tum.de?Subject=Responsive%20Resume" target="_top">email</a> or
 						<a href="http://www.twitter.com/philipcdavis">tweet</a> at me.
 					</p>
 				</div>
@@ -180,7 +180,7 @@
 		<!--Footer-->
 		<footer class="center">
 			<hr>
-			<span>&copy; Your Name 2014</span>
+			<span>&copy; Zeyad Hassan 2020</span>
 		</footer>
 		
 	</div><!-- End Container -->
