--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 	<div class="container">
 	
 		<section class="education">	
-			<h2>B.S. Information Systems and Operations Management from the University of Maryland.</h2>
+			<h2>M.Sc. Computational Mechanics from the Technical University of Munich.</h2>
+			<h2>B.Sc. Mechanical Engineering from Politecnico di Torino.</h2>
 		</section>
 		
 		<hr>
