--- a/index.html
+++ b/index.html
@@ -169,8 +169,7 @@
 						This is a good spot to highlight experiance and skills. Make sure to include a call to action like a link to your website, or your email address.
 						If you find bugs, want features, or have questions, feel free to submit an <a href="https://github.com/zeyadhassan/zeyadhassan.github.io/issues">issue</a>.
 						If you'd like to contact me, Shoot me an
-						<a href="mailto:zeyad.hassan@tum.de?Subject=Responsive%20Resume" target="_top">email</a> or
-						<a href="http://www.twitter.com/philipcdavis">tweet</a> at me.
+						<a href="mailto:zeyad.hassan@tum.de?Subject=Responsive%20Resume" target="_top">email</a>
 					</p>
 				</div>
 			</div>
